<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_fragment_search_from_cart">Search From Chart</string>
    <string name="cart_fragment_cart_total">TOTAL: $</string>
    <string name="cart_fragment_next">NEXT</string>
    <string name="notification_fragment_login_message">You are not login! \nPlease login first!</string>
    <string name="notification_fragment_login">LOGIN</string>
    <string name="person_fragment_log_out">LOGOUT</string>
    <string name="pay_fragment_txt">Please fill out your personal detail</string>
    <string name="pay_fragment_name">YOUR NAME:</string>
    <string name="pay_fragment_address">YOUR ADDRESS:</string>
    <string name="pay_fragment_postcode">YOUR POSTCODE:</string>
    <string name="pay_fragment_phone">YOUR PHONE NUMBER</string>
    <string name="pay_fragment_pay">BUY NOW!</string>
    <string name="item_quantity">Quantity Available</string>
    <string name="item_add_to_cart">Add to cart</string>
    <string name="item_description">Description</string>
    <string name="item_price">Price</string>
    <string name="item_seller">Seller</string>
    <string name="item_category">Category</string>
</resources>